# juno

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/: cat.hpp  command.hpp  config.hpp  deadlockversion.hpp  filter.hpp  logging.hpp  module.hpp  ping.hpp  qalc.hpp  util.hpp
include/commands/: cat.hpp  deadlockversion.hpp  ping.hpp  qalc.hpp
include/filters/: languagebarrier.hpp
resources/: juno_error.psd
src/: cat.cpp  deadlockversion.cpp  logging.cpp  main.cpp  ping.cpp  qalc.cpp
src/commands/: cat.cpp  deadlockversion.cpp  ping.cpp  qalc.cpp
src/filters/: languagebarrier.cpp
