cmake_minimum_required(VERSION 3.11)
project(juno)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -fsanitize=address -fsanitize=leak -fsanitize=undefined")

option(JUNO_CAT_CMD             "build /cat command"             ON)
option(JUNO_DEADLOCKVERSION_CMD "build /deadlockversion command" ON)
option(JUNO_PING_CMD            "build /ping command"            OFF)
option(JUNO_QALC_CMD            "build /qalc command"            ON)

# Use pkgconfig to find dependencies
find_package(PkgConfig REQUIRED)

# Find libqalculate (needs to be installed on system)
pkg_check_modules(LIBQALCULATE REQUIRED libqalculate)

# Find dpp (needs to be installed on system)
pkg_check_modules(DPP REQUIRED dpp)

# Find sources
if(JUNO_CAT_CMD)
    set(JUNO_CMD_SOURCES
        ${JUNO_CMD_SOURCES}
        "src/commands/cat.cpp"
    )
endif()

if(JUNO_DEADLOCKVERSION_CMD)
    set(JUNO_CMD_SOURCES
        ${JUNO_CMD_SOURCES}
        "src/commands/deadlockversion.cpp"
    )
endif()

if(JUNO_PING_CMD)
    set(JUNO_CMD_SOURCES
        ${JUNO_CMD_SOURCES}
        "src/commands/ping.cpp"
    )
endif()

if(JUNO_QALC_CMD)
    set(JUNO_CMD_SOURCES
        ${JUNO_CMD_SOURCES}
        "src/commands/qalc.cpp"
    )
endif()
message(STATUS "Juno Command Sources -> ${JUNO_CMD_SOURCES}")

# Copy config.json over for convenience
if (EXISTS "../config.json")
    file(COPY "config.json" DESTINATION .)
else()
    message(STATUS "WARNING: config.json missing")
endif()

# Create the magic commands code to automatically add commands to the commands vector
set(JUNO_MAGIC_COMMANDS_IMPORTS "")
set(JUNO_MAGIC_COMMANDS_CODE "")
file(GLOB COMMAND_FILES "include/commands/*.hpp")
foreach(file ${JUNO_CMD_SOURCES})
    string(FIND ${file} "/" begin REVERSE)
    string(FIND ${file} "." end)

    math(EXPR begin "${begin} + 1")
    math(EXPR diff "${end} - ${begin}")

    string(SUBSTRING ${file} ${begin} ${diff} command_name)
    string(APPEND JUNO_MAGIC_COMMANDS_IMPORTS "#include <commands/${command_name}.hpp>\n")
    string(APPEND JUNO_MAGIC_COMMANDS_CODE "\t\tvec.push_back(std::make_unique<${command_name}>());\n")
endforeach()

file(WRITE "include/generated.hpp"
"// FILE GENERATED BY CMAKE
// DO NOT EDIT MANUALLY
#ifndef JUNO_GENERATED_HPP
#define JUNO_GENERATED_HPP

#include <memory>
#include <vector>
#include <command.hpp>
${JUNO_MAGIC_COMMANDS_IMPORTS}
namespace juno {
    inline void add_commands(std::vector<std::unique_ptr<command>>& vec){
${JUNO_MAGIC_COMMANDS_CODE}\t}
}
#endif // JUNO_GENERATED_HPP
"
)

add_executable(
        juno
        "src/main.cpp"
        "src/logging.cpp"
        ${JUNO_CMD_SOURCES}
)

target_include_directories(juno PRIVATE ${DPP_INCLUDE_DIRS} ${LIBQALCULATE_INCLUDE_DIRS} "include")
target_link_libraries(juno ${LIBQALCULATE_LIBRARIES} ${DPP_LIBRARIES})
target_compile_options(juno PRIVATE ${LIBQALCULATE_CFLAGS_OTHER} ${DPP_CFLAGS_OTHER})
